apps/cyberstorm-remix/app/commonComponents/PackageSearch/PackageSearch.css
@layer nimbus-components {
  .package-search {
    display: flex;
    gap: var(--gap-xl);
    align-items: flex-start;
    align-self: stretch;
  }

  .package-search__sidebar {
    position: sticky;
    top: calc(var(--header-height) + 1rem);
    display: flex;
    flex-direction: column;
    gap: var(--gap-sm);
    align-items: flex-start;
    min-width: 15.5rem;
    max-height: calc(100vh - var(--header-height) - 2rem);
    padding-top: var(--space-16);
    border-radius: var(--radius-md);
    overflow-y: auto;
    scrollbar-width: none;
  }

  .package-search__search {
    width: 100%;
  }

  .package-search__filters {
    display: flex;
    flex-direction: column;
    gap: var(--gap-sm);
    gap: 0.75rem;
    align-items: stretch;
    align-self: stretch;
    width: 15.5rem;
  }

  .package-search__content {
    display: flex;
    flex: 0 1 100%;
    flex-direction: column;
    gap: var(--space-24);
    align-items: flex-start;
    padding-top: 1rem;
  }

  .package-search__pagination {
    display: flex;
    gap: var(--gap-2xs);
    align-items: center;
    align-self: stretch;
    justify-content: center;
    padding-top: var(--space-40);

    > .skeleton {
      width: 100%;
      max-width: 20rem;
      height: 2.5rem;
    }
  }

  .package-search__search-params {
    display: flex;
    flex: 1 1 0;
    flex-direction: column;
    gap: var(--gap-md);
    align-items: flex-start;
    align-self: stretch;
    justify-content: center;
    min-width: 0;
  }

  .package-search__tags {
    display: flex;
    flex: 0 1 0;
    gap: var(--gap-sm);
    align-items: center;
    min-width: 0;
  }

  .package-search__tools {
    display: flex;
    flex-wrap: wrap;
    gap: var(--gap-xl);
    align-items: center;
    align-self: stretch;
  }

  .package-search__listing-actions {
    display: flex;
    gap: var(--gap-md);
    align-items: center;

    /* > .__display {
      display: flex;
      flex-direction: column;
      gap: var(--gap-xs);
      align-items: flex-start;
    } */
  }

  .package-search__sorting {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  .package-search__results {
    display: flex;
    flex: 1;
    gap: var(--gap-2xs);
    align-items: center;
    justify-content: flex-end;

    .skeleton {
      width: 18ch;
      height: 1rem;
    }
  }

  .package-search__packages {
    display: flex;
    flex: 1 1 0;
    flex-direction: column;
    gap: var(--gap-md);
    align-items: center;
    align-self: stretch;
  }

  .package-search__grid {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
    gap: var(--gap-sm);
    width: 100%;

    > .skeleton {
      height: 30rem;
    }
  }

  @media (width <= 48rem) {
    .package-search__tools {
      flex-direction: column;
      align-items: stretch;
    }

    .package-search__results {
      align-items: stretch;
      justify-content: center;
    }

    .package-search__sorting {
      width: 100%;
    }

    .package-search__grid {
      grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
    }
  }

  @media (width <= 475px) {
    .package-search {
      flex-direction: column;
      gap: 0.25rem;
    }

    .package-search__sidebar {
      position: relative;
      top: 0;
      width: 100%;
    }

    .package-search__filters {
      width: unset;
    }

    .package-search__tools {
      flex-direction: column;
      gap: 0.5rem;
      align-items: stretch;
    }

    .package-search__results {
      align-items: stretch;
      justify-content: center;
    }

    .package-search__grid {
      grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));

      > .skeleton {
        height: 28rem;
      }
    }

    .package-search__content {
      gap: 0.5rem;
      align-self: stretch;
    }
  }

  /* This is added for better grid on phones */
  @media (width <= 416px) {
    .package-search__grid {
      grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
    }
  }
}

